# AI-Real-Estate-Agent

ai_real_estate_agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai_real_estate_agent/app/: __init__.py  config.py  llm_client.py  main.py  model_loader.py  schemas.py
ai_real_estate_agent/app/routers/: __init__.py  predictions.py  queries.py
ai_real_estate_agent/docs/: API_DOCS.md  CONTRIBUTING.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  SETUP.md
ai_real_estate_agent/models/: .gitkeep  train_stats.json
ai_real_estate_agent/training/: README.md  __init__.py  colab_model_training.py  train_model.py
ai_real_estate_agent/ui/: streamlit_app.py
